<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:paddingLeft="16dp"
	android:paddingRight="16dp"
	android:paddingTop="16dp" >

    <TextView
        android:id="@+id/current_temp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
		android:layout_alignParentLeft="true"
        android:text="@string/current_temp_label" />

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_alignParentRight="true"
        android:text="@string/current_temp" />

    <TextView
        android:id="@+id/target_temp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
		android:layout_alignParentLeft="true"
		android:layout_alignBottom="@+id/target_temp"
		android:gravity="center_vertical"
		android:layout_below="@id/current_temp_label"
        android:text="@string/target_temp_label" />

    <Button
        android:id="@id/target_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/current_temp"
        android:text="@string/target_temp" />

    <TextView
        android:id="@+id/hold_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
		android:layout_alignParentLeft="true"
		android:layout_alignBottom="@+id/hold_switch"
		android:gravity="center_vertical"
		android:layout_below="@id/target_temp_label"
        android:text="@string/hold_label" />

    <Switch
        android:id="@id/hold_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/target_temp"
        android:onClick="onHoldSwitchClicked" />
    
    <ProgressBar
	    android:id="@+id/progress"
	    style="?android:attr/progressBarStyleLarge"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/hold_label"
	    android:layout_centerInParent="true"
	    android:visibility="invisible" />
    
</RelativeLayout>
